# GeoDatasetTrackerPlugin

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/routes/: datasets.py
backend/data/: geo.db
backend/geo_dataset_collector_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_bulk_lookup.py  test_datasets_api.py
extension/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
extension/manifests/: chrome.json  firefox.json
extension/scripts/: build.mjs  make-icons.mjs  release-firefox.mjs
extension/src/: background.ts
extension/src/content/: detail-page.ts  index.ts  parser.ts  search-results.ts  styles.css  ui.ts
extension/src/lib/: api.ts  bridge.ts  cache.ts  health.ts  types.ts
extension/src/popup/: popup.css  popup.html  popup.ts
extension/src/tests/: parser.test.ts
releases/: updates.json
releases/xpis/: geo_dataset_collector-0.1.2.xpi  geo_dataset_collector-0.1.3.xpi
