[project]
name = "geo-dataset-collector-backend"
version = "0.1.0"
description = "FastAPI backend for the GEO Dataset Collector extension"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
